[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[metadata]
name = infraform
author = Arie Bregman
author_email = bregman.arie@gmail.com
summary = Managing infra and apps with one liners
version = 0.0.1
description-file = README.md
license = Apache License, Version 2.0
classifier =
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    infraform

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    infraform=infraform.cli:main
    ifr=infraform.cli:main
